traefik-le-ha/etcdkeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcdkeeper
  namespace: traefik
  labels:
    k8s-app: etcdkeeper
spec:
  selector:
    matchLabels:
      k8s-app: etcdkeeper
  template:
    metadata:
      labels:
        k8s-app: etcdkeeper
    spec:
      containers:
        - name: app
          image: 101063723418.dkr.ecr.eu-west-1.amazonaws.com/etcdkeeper
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: etcdkeeper
  name: etcdkeeper
  namespace: traefik
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    k8s-app: etcdkeeper
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: kube-ingress.k8s.lominorama.com
    traefik.ingress.kubernetes.io/app-root: /etcdkeeper/
    kubernetes.io/ingress.class: traefik
  labels:
    k8s-app: etcdkeeper
  name: etcdkeeper
  namespace: traefik
spec:
  rules:
  - host: etcdkeeper.k8s.lominorama.com
    http:
      paths:
      - backend:
          serviceName: etcdkeeper
          servicePort: http
        path: /
