traefik-le-ha/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    role: ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-services-subnet
  namespace: traefik
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  # Allow from ALBs
  - from:
    - ipBlock:
        cidr: 10.42.0.0/25
    - ipBlock:
        cidr: 10.42.0.128/25
  # Allow from traefik's own namespace
  - from:
    - namespaceSelector:
        matchLabels:
          role: ingress
  # Allow from prometheus for custom metrics monitoring
  - from:
    - namespaceSelector:
        matchLabels:
          role: monitoring
      podSelector:
        matchLabels:
          prometheus: k8s
